src/App.css
/* Main Styles */
body {
  background-color: white;
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(61, 54, 92);
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.buttonContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.genButton {
  background-color: rgb(201, 87, 146);
  color: white;
  border: none;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

.genButton:hover {
  background-color: rgb(248, 181, 95);
  color: white;
  transition: 0.6s;
}

/* Header */
.header {
  display: flex;
  justify-content: space-around;
  width: 100%;
  margin: auto 0;
  font-size: 20px;
}

.banner {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  margin-bottom: 10px;
} 

.nav {
  display: flex;
  margin-top: 10px;
  margin-bottom: 20px;
}

.nav a {
  color: rgb(61, 54, 92);
  text-decoration: none;
}

.nav a:visited {
  color: rgb(61, 54, 92);
}

.nav a:hover {
  color: rgb(201, 87, 146);
}

.navList {
  list-style: none;
  flex-direction: row;
  display: flex;
  margin-top: 10px;
}

.navList li {
  margin-left: 15px;
  margin-right: 15px;
}

#contactButton {
  background-color: rgb(201, 87, 146);
  color: white;
  border: none;
  padding: 10px 20px;
  text-align: center;
  text-decoration: none;
  font-size: 20px;
  cursor: pointer;
  }

#contactButton:hover {
  background-color: rgb(248, 181, 95);
  color: white;
  transition: 0.6s;
}

/* Footer */
.footer {
  display: flex;
  width: 100%;
  color: rgb(61, 54, 92);
  font-size: 16px;  
  margin-top: 80px;
  justify-content: center;
}

.socialIcon {
  height: 50px;
  width: 50px;
  margin: 0 15px;
  opacity: 0.7;
}

.attribution a {
  font-size: 12px;
  color: rgb(201, 87, 146);
  text-decoration: none;
}

.attribution a:visited {
  color:rgb(201, 87, 146);
}

.attribution a:hover {
  color:rgb(61, 54, 92);
  font-size: 14px;
  transition: 1s;
}

/* Images */
.imageContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
}

#introPic {
  margin: 20px;
  border-radius: 50%;
  height: 300px;
  object-fit: cover;
}

.awsBadge {
  height: 200px;
}

/* Home */
.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.home h1 {
  color: rgb(61, 54, 92);
  margin: 5px;
}

.home h2 {
  color: rgb(61, 54, 92);
  margin: 0;
  font-size: 20px;
  text-align: center;
}

.home h4 {
  color:rgb(201, 87, 146);
  margin: 10px;
  font-size: 16px;
  font-weight: 400;
  text-align: center;
}

.introBox {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.textBox {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.textBox p {
  font-size: 18px;
  padding: 15px;
}

.aboutBanner {
  height: 200px;
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
  background-color: rgb(219, 240, 246);
}

.iconBanner {
  display: flex;
  position: relative;
  width: 100%;
  height: 180px;
  margin-top: 20px;
}

.iconBanner img {
  /* position: absolute; */
  height: 100px;
  width: 100px;
}

/* About */
.about {
  display: flex;
  width: 100%;
  height: 100%;
}

.aboutText {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}

.techSkillList {
  display: flex;
  width: 100%;
  flex-direction: row;;
}

.techSkillList ul {
  display: flex;
  margin-top: 40px;
}

.techSkillList li {
  list-style-type: none;
  margin-left: 20px;
}

.certList {
  display: flex;
  flex-direction: row;;
  width: 100%;
}

.certList ul {
  display: flex;
  margin-top: 40px;
}

.certList li {
  list-style: none;
  margin-left: 40px;
  margin-right: auto;
}

.icon {
  width: 100px;
  height: 100px;
}

/* 
.resumeList {
} */

.interestsList li {
  list-style: none;
}

.interestsAlt {
  display: flex;
  background-color: rgb(219, 240, 246);
  width: 100%;
  margin-top: 20px;
}

.smallIcon {
  width: 50px;
  height: 50px;
}

